# vouch

./: .all-contributorsrc  .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  RELEASES.md  ROADMAP.md  SECURITY.md  TRADEMARK.md  WAYS-OF-WORKING.md  codecov.yml  final_polish.py  fix_cli.py  funding.json  manage.py  pyproject.toml  requirements.txt  scribe_alias.sh  update_all.py  update_manifesto.py  update_readme.py  update_readme_shield.py  upgrade_header.py  vouch.json
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
adopters/: delegation.json
agent-trust-index/: .gitignore  METHODOLOGY.md  README.md  build_site.py  enrich.py  run.py  run_sweep.py
agents-and-skills/: FAQ-DRAFT.md  HELP-GUIDE-DRAFT.md  README.md  TESTING.md
arxiv/: README.md
browser-extension/: EDGE_STORE_LISTING.md  STORE_LISTING.md  STORE_LISTING.txt  background.js  content.css  content.js  manifest.json  popup.html  popup.js  test-verification.html
claude-skill/: README.md  SKILL.md
cloudflare-email-worker/: SETUP.md  package.json  wrangler.toml
cloudflare-worker/: DEPLOY.md  package.json  wrangler.toml
conformance/: README.md  delegation.json
conformance-worker/: README.md  lib.js  package.json  smoke.mjs  worker.js  wrangler.toml
contributors/: delegation.json
core/: .gitignore  README.md
core/uniffi/: Cargo.toml  build.rs  cbindgen.toml  uniffi-bindgen.rs
core/uniffi/src/: c_api.rs  lib.rs  vouch_core.udl
core/vouch-core/: Cargo.toml
core/vouch-core/examples/: generate_eddsa_vector.rs  sign_for_interop.rs
core/vouch-core/src/: attenuation.rs  credentials.rs  data_integrity.rs  delegation.rs  error.rs  hybrid.rs  jcs.rs  keys.rs  lib.rs  multikey.rs  pq.rs  recovery.rs  recovery_json.rs  robotics.rs  robotics_dtn.rs  robotics_json.rs  root_of_trust.rs  status_list.rs  threshold.rs  threshold_json.rs  time.rs
core/vouch-core/tests/: interop_delegation.rs  interop_eddsa_vector.rs  interop_jcs.rs  interop_keys.rs  interop_pq.rs  interop_proofs.rs  interop_robotics_dtn.rs  interop_status.rs  phase1_binding.rs
core/wasm/: Cargo.toml  README.npm.md  build-npm.sh  smoke.mjs
core/wasm/src/: lib.rs
demo/: vouch_demo.cast  vouch_demo.sh
docs/: 404.html  CNAME  HYBRID_TRANSPORT.md  MOBILE_ARCHITECTURE.md  RELEASING.md  SCRIBE_CONTEXT_EXAMPLE.md  SCRIBE_HANDOFF_EXAMPLE.md  THREAT_MODEL.md  cps.html  cross-device-identity.md  demo.html  dtn-bounded-staleness-revocation.md  hybrid-pq-implementation-guide.md  index.html  index.txt  install.sh  key-ceremony.html  lfai-proposal.adoc  mcp-quickstart.md  mcp-tutorial.md  onboarding-wizard-spec.md  openssf-badge-guide.md  openssf-silver-application.md  privacy.html  quickstart-demo.md  robotics.md  robots.txt  signing-guide.md  sitemap.xml  terms.html  threshold-signing.md  udna-upstream-proposal.md  vouch_guide.md
examples/: 00_the_rogue_agent.py  README.md  accountability_demo.py  agent_enroll_and_verify.py  budget_payment_demo.py  caveats_demo.py  cross_device_identity.py  deliberation_demo.py  disconnected_exchange_demo.py  ephemeral_demo.py  fastapi_credential_gate.py  fastapi_server.py  getting_started.py  hardware_seam_demo.py  http_rendezvous_demo.py  hybrid_transport_demo.py  integrations_delegation.py  langchain_agent.py  mcp_trust_lifecycle.py  provenance_demo.py  reasoned_action_demo.py  reputation_demo.py  robotics_demo.py  root_of_trust_demo.py  secure_banking_agent.py  telephony_gateway.py  transparency_demo.py  udna_rendezvous_demo.py  who_wrote_this.py
gemini-extension/: GEMINI.md  README.md  gemini-extension.json
gemini-gem/: README.md  description.txt  examples.md  instructions.md  name.txt
github-app/: .env.example  README.md  app-manifest.json  app-manifest.yml  example-vouch-policy.yml  leak_check.py  main.py  pyproject.toml  test_leak_check.py
github-app-worker/: MARKETPLACE.md  README.md  package.json  wrangler.toml
go-sidecar/: build-native.sh  go.mod  go.sum
licenses/: LICENSE-CLIENT  LICENSE-SERVER  LICENSE-SPEC
mobile/: README.md
mobile/core/: Cargo.toml  README.md  V3_DSP_CONSOLIDATION.md  build.rs  build.sh  uniffi-bindgen.rs
mobile/core/src/: lib.rs  vouch_sonic_core.udl
mobile/core/wasm/: Cargo.toml  README.npm.md  build-npm.sh
mobile/core/wasm/src/: lib.rs
mobile/sonic-dsp/: Cargo.toml
mobile/sonic-dsp/src/: lib.rs
openai-gpt/: README.md  actions-auth.md  actions.yaml  conversation-starters.md  description.txt  instructions.md  name.txt
papers/: README.md
scripts/: bootstrap_adopter_authority.py  create-user-did.py  deploy-tracks-a-and-b.sh  extract-ati.py  gen_runtime_vectors.py  mint_adopter_credential.py  mint_conformance_credential.py  mint_contributor_credential.py  mint_delegation.py  publish_blog.py  release.sh  render_adopter_cert.py  render_ati_card.py  render_contributor_cert.py  sign_blog.py  verify_git_history.py
sdks/: .gitignore  README.md
sdks/cpp/: .gitignore  CMakeLists.txt  README.md  build-native.sh
sdks/cpp/examples/: Makefile  example.c
sdks/cpp/include/: vouch.hpp  vouch_core.h
sdks/cpp/test/: Makefile  test_agent.cpp  test_robotics.cpp
test-vectors/: README.md
tests/: break_it_exercises.py  conftest.py  red_team.py  test_accountability.py  test_agent_enroll.py  test_async_verifier.py  test_attenuation_vectors.py  test_attribution.py  test_audio_bridge.py  test_audit_trail.py  (+103 more)
website-agent/backend/: Dockerfile  fly.toml  pyproject.toml
website-agent/backend/knowledge/: accountable-autonomy.md  ai-assistants.md  delegation.md  disconnected-edge.md  integrations.md  language-sdks.md  overview.md  quickstart.md  revocation.md  robotics.md  sidecar-tiers.md  sidecar.md  transport.md  troubleshooting.md
website-agent/backend/tests/: test_rag.py  test_signer.py
website-agent/backend/vouch_agent/: __init__.py  audit.py  config.py  dev_sidecar.py  followups.py  interactions.py  llm.py  main.py  rag.py  signer.py
(+1930 files in other folders)
