[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vouch-protocol"
version = "1.4.0"
description = "The Identity & Reputation Standard for AI Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Vouch Protocol Contributors", email = "hello@vouch-protocol.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agents", "identity", "cryptography", "did", "verifiable-credentials"]

dependencies = [
    "jwcrypto>=1.5.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
# Framework integrations
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
mcp = ["mcp>=0.1.0"]
vertex = ["google-cloud-aiplatform>=1.0.0"]
streamlit = ["streamlit>=1.0.0"]

# Server dependencies
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# Enterprise features (caching, metrics, rate limiting)
enterprise = [
    "redis>=5.0.0",
    "prometheus-client>=0.17.0",
]

# Cloud KMS integrations
aws = ["aioboto3>=12.0.0"]
gcp = ["google-cloud-kms>=2.0.0"]
azure = ["azure-keyvault-keys>=4.0.0"]

# OpenTelemetry tracing
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

# All optional dependencies
all = [
    "vouch-protocol[langchain,crewai,autogen,mcp,vertex,streamlit,server,enterprise,tracing,dev]"
]

[project.urls]
"Homepage" = "https://github.com/vouch-protocol/vouch"
"Bug Tracker" = "https://github.com/vouch-protocol/vouch/issues"
"Documentation" = "https://vouch-protocol.com"

[project.scripts]
vouch = "vouch.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vouch*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Focus on real bugs and security issues for now
select = ["E", "F", "B", "A"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "F401",   # Unused imports (common in __init__.py)
    "W293",   # Whitespace in blank lines (cosmetic)
    "B904",   # Exception chaining (fix later)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
