[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vouch-protocol"
version = "1.6.3"
description = "The Identity & Reputation Standard for AI Agents"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Vouch Protocol Contributors", email = "hello@vouch-protocol.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["ai", "agents", "identity", "cryptography", "did", "verifiable-credentials"]

dependencies = [
    "jwcrypto>=1.5.0",
    "python-dateutil",
    "cryptography",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    # Hybrid post-quantum profile (Specification 13.2; W3C-aligned cryptosuite
    # `hybrid-eddsa-mldsa44-jcs-2026`). Bundled by default: pqcrypto ships
    # prebuilt wheels for all mainstream platforms (~80 KB, no compiler needed)
    # and the PQ story is core to Vouch, so we do not gate it behind an extra.
    "pqcrypto>=0.4.0",
]

[project.optional-dependencies]
# Framework integrations
langchain = ["langchain>=0.1.0"]
crewai = ["crewai>=0.1.0"]
autogen = ["pyautogen>=0.2.0"]
mcp = ["mcp>=0.1.0"]
vertex = ["google-cloud-aiplatform>=1.0.0"]
streamlit = ["streamlit>=1.0.0"]

# Server dependencies
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

# Enterprise features (caching, metrics, rate limiting)
enterprise = [
    "redis>=5.0.0",
    "prometheus-client>=0.17.0",
]

# Cloud KMS integrations
aws = ["aioboto3>=12.0.0"]
gcp = ["google-cloud-kms>=2.0.0"]
azure = ["azure-keyvault-keys>=4.0.0"]

# Hybrid post-quantum profile is now bundled by default (see required
# `dependencies` above). The `pq` extra is retained as a no-op alias so
# `pip install 'vouch-protocol[pq]'` keeps working for anyone who already
# wrote that into a Dockerfile or requirements.txt.
pq = []

# UDNA (Universal DID-Native Addressing) identity-first transport.
# Optional: when absent, the hybrid transport stack degrades to HTTP fallback.
udna = ["sirraya-udna-sdk>=0.1.0"]

# OpenTelemetry tracing
tracing = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-httpx>=0.40b0",
]

# Media signing (images, C2PA)
media = [
    "Pillow>=10.0.0",
    "base58>=2.1.0",
    "qrcode>=7.4.0",
    "c2pa-python>=0.5.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "Pillow>=10.0.0",
    "base58>=2.1.0",
    "qrcode>=7.4.0",
    "c2pa-python>=0.5.0",
]

# All optional dependencies
all = [
    "vouch-protocol[langchain,crewai,autogen,mcp,vertex,streamlit,server,enterprise,tracing,dev]"
]

[project.urls]
"Homepage" = "https://github.com/vouch-protocol/vouch"
"Bug Tracker" = "https://github.com/vouch-protocol/vouch/issues"
"Documentation" = "https://vouch-protocol.com"

[project.scripts]
vouch = "vouch.cli:main"
vouch-mcp = "vouch.integrations.mcp.server:main"
vouch-bridge = "vouch.bridge.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vouch*"]
exclude = ["vouch.pro", "vouch.pro.*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Focus on real bugs and security issues for now
select = ["E", "F", "B", "A"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (examples use late imports for pedagogy)
    "F401",   # Unused imports (common in __init__.py)
    "W293",   # Whitespace in blank lines (cosmetic)
    "B904",   # Exception chaining (fix later)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
