[project]
name = "vouch-gatekeeper"
version = "1.0.0"
description = "GitHub App for cryptographic identity enforcement on Pull Requests"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
    "pyyaml>=6.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
