[package]
name = "vouch-core"
version = "0.1.0"
edition = "2021"
authors = ["Ramprasad Anandam Gaddam"]
description = "Vouch Protocol canonical core: JCS canonicalization, Ed25519 + ML-DSA proofs, did:key/multikey, Data Integrity (eddsa-jcs-2022), credentials, delegation, revocation. One byte-exact implementation shared by every language SDK via WASM and UniFFI/C-FFI."
license = "Apache-2.0"
repository = "https://github.com/vouch-protocol/vouch"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# ECMAScript-compliant float formatting (RFC 8785 number serialization), so JCS
# matches JavaScript's Number.prototype.toString byte-for-byte.
ryu-js = "1"
# "zeroize" wipes the SigningKey's secret seed from memory on drop.
ed25519-dalek = { version = "2", features = ["zeroize"] }
fips204 = "0.4"
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.22"
flate2 = "1"
getrandom = "0.2"
zeroize = "1"

[dev-dependencies]
hex = "0.4"
