[package]
name = "vouch-sonic-core"
version = "0.1.0"
edition = "2021"
authors = ["Ramprasad Anandam Gaddam"]
description = "Vouch Sonic Engine - Real-time audio watermark detection for mobile"
license = "MIT"
repository = "https://github.com/vouch-protocol/vouch"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "vouch_sonic_core"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
# UniFFI for cross-language bindings
uniffi = { version = "0.28", features = ["cli"] }

# FFT for spectral analysis
rustfft = "6.2"

# Resampling
rubato = "0.15"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random for testing
rand = "0.8"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
tempfile = "3.0"

[features]
default = []
# Enable AudioSeal neural watermarking (requires torch)
audioseal = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # Optimize for size on mobile
strip = true
