[project]
name = "vouch-website-agent"
version = "0.1.0"
description = "Agentic helper for the Vouch Protocol website that signs every action with a Vouch credential."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pydantic>=2.6",
    "anthropic>=0.34",
    "numpy>=1.26",
    "tiktoken>=0.7",
    "vouch-protocol>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
embeddings-openai = ["openai>=1.30"]
embeddings-anthropic = []
gemini = ["google-genai>=0.3"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["vouch_agent*"]
