[package]
name = "vouch-sonic-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Ramprasad Anandam Gaddam"]
description = "Vouch Sonic Engine - WASM build for browser-side audio watermark embed/detect"
license = "Apache-2.0"
repository = "https://github.com/vouch-protocol/vouch"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# DSP
rustfft = "6.2"

# Crypto
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Random (WASM-compatible)
getrandom = { version = "0.2", features = ["js"] }

# Utilities
thiserror = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
opt-level = "z"
strip = true
